k8s/base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-deployment
  template:
    metadata:
      name: db-deployment
      labels:
        app: db-deployment
    spec:
      containers:
        - name: db-deployment
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
